# csv-compare

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  cli.py  pyproject.toml  setup.py
.github/workflows/: test.yaml
csv-compare/: CSVComparer.py
csv_compare/: CSVComparer.py
src/csv_compare_tool/: cli.py
src/csvcomparetool/: __init__.py  cli.py
tests/: anyorg_new_titles.csv  anyorg_old_titles.csv  fruits1.csv  fruits2.csv  test_csv_comparer.py
